# nOEN

./: .gitignore  README.md  pyproject.toml
Data/: example.xlsx
Data/Template/: template.xlsx
Results/: _README.md
src/nOEN/: __init__.py  getData.py  nOENcmd.py  plotting.py  stats.py
